feat: recipe links & home link
- Added link to a recipe for user nav
- Added home link for easier user nav

--- a/recipes/french-fries.html
+++ b/recipes/french-fries.html
@@ -8,5 +8,6 @@
 
   <body>
     <h1>French Fries Recipe</h1>
+    <a href="../index.html" rel="noreferrer" title="Home">Go back to Home</a>
   </body>
 </html>
