--- a/recipes/french-fries.html
+++ b/recipes/french-fries.html
@@ -13,6 +13,27 @@
     <p>Image Courtesy of <a href="https://www.dinneratthezoo.com/homemade-french-fries/" rel="noreferrer" title="Dinner At The Zoo"><em>Dinner At The Zoo</em></a></p>
 
     <h2>Description</h2>
+    <p>There's nothing better than homemade french fries - they're light, crispy, and full of flavor. Many restaurants use frozen fries, and I think my version is so much better because there's a freshness factor that the frozen fries just can't touch!
+    </p>
+
+    <h3>Ingredients</h3>
+    <ul>
+      <li>2 1/2 pounds Russet potatoes</li>
+      <li>oil for frying I use vegetable or peanut oil</li>
+      <li>salt and pepper to taste</li>
+      <li>1 tablespoon chopped parsley optional</li>
+    </ul>
+
+    <h3>Step-by-Step Process</h3>
+    <ol>
+      <li>Cut the potatoes into matchsticks, either with a knife or with a french fry cutter. The potato pieces should all be similar in size.</li>
+      <li>Place the potatoes in a bowl of cold water. Soak the potatoes for at least 30 minutes.</li>
+      <li>Drain the water from the potatoes. Place the potatoes on a layer of paper towels and pat thoroughly with additional towels until dry.</li>
+      <li>Pour 3 inches of oil into a large, deep pot. Heat the oil to 300 degrees F.</li>
+      <li>lace about 1/3 of the potatoes in the pot, and cook until tender. This takes about 4-5 minutes. Repeat the process with the remaining potatoes.</li>
+      <li>Increase the heat of the oil to 400 degrees F. Place 1/3 of the potatoes back in the pot and cook for an additional 1-3 minutes or until golden brown. Repeat the process with the remaining potatoes. Place the cooked potatoes on a sheet pan lined with paper towels.</li>
+      <li>Sprinkle salt and pepper to taste over the fries. Add parsley if desired, then serve immediately.</li>
+    </ol>
 
     <a href="../index.html" rel="noreferrer" title="Home">Go back to Home</a>
   </body>
