feat: Add link to creme brulee recipe
- To enhance user navigation

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
   <body>
     <h1>Odin Recipes</h1>
     <a href="./recipes/french-fries.html" rel="noreferrer" title="French Fries Recipe">French Fries</a>
+    <br> <a href="./recipes/creme-brulee.html" rel="noreferrer" title="Creme Brulee">Creme Brulee</a>
   </body>
 </html>
