--- a/recipes/creme-brulee.html
+++ b/recipes/creme-brulee.html
@@ -8,5 +8,7 @@
 
   <body>
     <h1>Creme Brulee Recipe</h1>
+
+    <a href="../index.html" rel="noreferrer" title="Home">Go back to Home</a>
   </body>
 </html>
