Feat: Provide instructions on dish
- To give readers a step-by-step process on
how to do the dish

--- a/recipes/creme-brulee.html
+++ b/recipes/creme-brulee.html
@@ -14,6 +14,7 @@
 
     <h2>Description</h2>
     <p>If you happen to find yourself looking for a last-minute dessert, crème brûlée is here for you! I used to be super intimidated by this classic French dessert, assuming that anything involving a blow torch and custard would involve all sorts of complicated cooking techniques. But as it turns out, crème brûlée is actually surprisingly simple to make and it's always such a crowd pleaser.</p>
+
     <h3>Ingredients</h3>
     <ul>
       <li>2 cup heavy cream</li>
@@ -22,6 +23,20 @@
       <li>1/2 cup granulated white sugar, plus extra for topping*</li>
       <li>4 large egg yolks</li>
     </ul>
+
+    <h3>Step-by-Step Process</h3>
+    <ol>
+      <li>Prep oven and ramekins. Heat oven to 325°F. Place 4 (6-ounce) ramekins side by side in a large baking dish. Place a kettle of water on the heat to boil.</li>
+      <li>Heat the cream. Add the cream and salt to a small saucepan. Scrape the seeds from a vanilla bean into the cream and briefly whisk to combine. Heat over low heat until the cream is hot but not simmering, then remove from heat.</li>
+      <li>Whisk the sugar and egg yolks. While the cream mixture is heating, combine the sugar and egg yolks in a separate medium mixing bowl. Whisk by hand for 30 seconds to combine.</li>
+      <li>Temper the eggs. While whisking the egg mixture with one hand, use your other hand to slowly add in ½ cup of the cream mixture. Repeat with an additional ½ cup while whisking. Then pour in the remaining cream and whisk to combine.</li>
+      <li>Strain. Strain the entire mixture through a fine mesh strainer into a clean bowl to catch and discard any clumps that might have accidentally scrambled.</li>
+      <li>Fill the ramekins. Pour the mixture evenly into the ramekins so that they are nearly full. Pour the hot water from the kettle carefully into the baking dish surrounding the ramekins (avoid pouring water into the ramekins) until the water reaches halfway up the sides of the ramekins.</li>
+      <li>Bake. Very carefully transfer the baking dish to the oven. Bake for 30 to 40 minutes, or until the custard is still slightly jiggly but the centers are barely set. (If you’d like to double-check doneness using a cooking thermometer, the centers of the custard should measure 165°F.)</li>
+      <li>Cool. Very carefully remove the baking dish from the oven (remember that the water is very hot), then carefully remove the ramekins and transfer them to a heatproof surface. Let the ramekins cool to room temperature, then transfer them to the refrigerator and cool for at least 4 hours or until completely chilled.</li>
+      <li>Brulêe. Once the custard is chilled, remove the ramekins from the refrigerator. If you notice any condensation on the surface of the custards, blot it away gently with a paper towel. Add a very thin layer of sugar on top of each custard, swirling it around so that the sugar is distributed evenly. (I used a scant teaspoon per custard.) Use a kitchen torch to caramelize the top of each custard, holding the torch 2-3 inches from the top of the custard and very slowly moving the flame across the surface until it is a deep amber color and bubbly. Let the custard rest for at least one minute.</li>
+      <li>Serve. Serve immediately, topped with additional berries or toppings if desired.</li>
+    </ol>
 
     <br><a href="../index.html" rel="noreferrer" title="Home">Go back to Home</a>
   </body>
