Feat: Add link to cheese-pizza and home
- For readers to access the cheese-pizza
recipe
- To provide ease on user navigation from
the recipe page

--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Odin Recipes</h1>
     <a href="./recipes/french-fries.html" rel="noreferrer" title="French Fries Recipe">French Fries</a>
     <br> <a href="./recipes/creme-brulee.html" rel="noreferrer" title="Creme Brulee">Creme Brulee</a>
+    <br> <a href="./recipes/cheese-pizza.html">Cheese Pizza</a>
   </body>
 </html>
