--- a/recipes/cheese-pizza.html
+++ b/recipes/cheese-pizza.html
@@ -8,5 +8,7 @@
 
   <body>
     <h1>Cheese Pizza</h1>
+
+    <a href="../index.html" rel="noreferrer" title="Home">Go back to Home</a>
   </body>
 </html>
