Fix: Add Description Class
- To easily access description on styling

--- a/recipes/creme-brulee.html
+++ b/recipes/creme-brulee.html
@@ -15,8 +15,10 @@
       <p>Image Courtesy of <a href="https://www.gimmesomeoven.com/creme-brulee-recipe/" rel="noreffer" title="gimmesomeoven"><em>gimmesomeoven</em></a></p>
     </div>
 
-    <h2>Description</h2>
-    <p>If you happen to find yourself looking for a last-minute dessert, crème brûlée is here for you! I used to be super intimidated by this classic French dessert, assuming that anything involving a blow torch and custard would involve all sorts of complicated cooking techniques. But as it turns out, crème brûlée is actually surprisingly simple to make and it's always such a crowd pleaser.</p>
+    <div class="description">
+      <h2>Description</h2>
+      <p>If you happen to find yourself looking for a last-minute dessert, crème brûlée is here for you! I used to be super intimidated by this classic French dessert, assuming that anything involving a blow torch and custard would involve all sorts of complicated cooking techniques. But as it turns out, crème brûlée is actually surprisingly simple to make and it's always such a crowd pleaser.</p>
+    </div>
 
     <h3>Ingredients</h3>
     <ul>
