Fix: Add instruction class
- To easily access step-by-step process and
heading on styling

--- a/recipes/creme-brulee.html
+++ b/recipes/creme-brulee.html
@@ -29,7 +29,8 @@
       <li>4 large egg yolks</li>
     </ul>
 
-    <h3>Step-by-Step Process</h3>
+    <div class="instructions">
+      <h3>Step-by-Step Process</h3>
     <ol>
       <li>Prep oven and ramekins. Heat oven to 325°F. Place 4 (6-ounce) ramekins side by side in a large baking dish. Place a kettle of water on the heat to boil.</li>
       <li>Heat the cream. Add the cream and salt to a small saucepan. Scrape the seeds from a vanilla bean into the cream and briefly whisk to combine. Heat over low heat until the cream is hot but not simmering, then remove from heat.</li>
@@ -42,6 +43,8 @@
       <li>Brulêe. Once the custard is chilled, remove the ramekins from the refrigerator. If you notice any condensation on the surface of the custards, blot it away gently with a paper towel. Add a very thin layer of sugar on top of each custard, swirling it around so that the sugar is distributed evenly. (I used a scant teaspoon per custard.) Use a kitchen torch to caramelize the top of each custard, holding the torch 2-3 inches from the top of the custard and very slowly moving the flame across the surface until it is a deep amber color and bubbly. Let the custard rest for at least one minute.</li>
       <li>Serve. Serve immediately, topped with additional berries or toppings if desired.</li>
     </ol>
+
+    </div>
 
     <br><a href="../index.html" rel="noreferrer" title="Home">Go back to Home</a>
   </body>
